# LibreChat

./: .env.example  .gitignore  Dockerfile.extended  claude_instructions.txt  docker-compose.override.yml  librechat.yaml
mcp-spaced-repetition/: .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  librechat-config-example.yaml  pyproject.toml  requirements.txt
mcp-spaced-repetition/mcp_spaced_repetition/: fsrs.py  models.py  server.py  storage.py
